# radwanderweggabelung

./: .gitignore  README.md  pyproject.toml
DB/tables/: tblTrail_Trajectory.sql
backend/api/: rest_interface.py
trailsporks/: pyproject.toml
trailsporks/tests/: test_trailsporks.py
trailsporks/trailsporks/DB/: trailsporks.db
trailsporks/trailsporks/DB/core/: db_create.sql
trailsporks/trailsporks/DB/tables/: tblTrail_Trajectory.sql  tblTrails.sql
trailsporks/trailsporks/backend/api/: api.py  data.db
trailsporks/trailsporks/backend/api/models/: trail.py  trail_metadata.py  trail_rating.py  trail_trajectory.py
trailsporks/trailsporks/backend/api/resources/: trail_metadata_res.py  trail_rating_res.py  trail_res.py  trail_trajectory_res.py
trailsporks/trailsporks/gpx/: east-bound-and-down.gpx  inside-passage-2.gpx  master-link.gpx  notg.gpx  off-the-grid.gpx  predator.gpx  silent-swamp.gpx
trailsporks/trailsporks/insert/: connection.py  insert_test_traildata.py
