[tool.poetry]
name = "trailsporks"
version = "0.1.0"
description = ""
authors = ["raphael <norlandrhagen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.8.6"
gpxpy = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
